# DesktopAssistantAI

./: .gitignore  CMakeLists.txt  README.md  interface.cpp  largewindow.cpp  largewindow.h  main.cpp  miniwindow.cpp  miniwindow.h  overlay.cpp  overlay.h  textbox.cpp  textbox.h
app/: Dockerfile  app.py  requirements.txt
